Clean-up and simplify LauncherTests